Fixed overflow on root, fixed touch events on projects components

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,8 @@ $shader-color: rgba(35, 35, 35, 0.5);
 
 #root {
   min-height: 87vh;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 .active {
